--- a/src/Admin/pages/styles.scss
+++ b/src/Admin/pages/styles.scss
@@ -365,12 +365,23 @@ body {
 
         gap: 1.8em;
         margin-top: 1.5em;
-
+*{
+  transition: transform 1s  ease .1s, opacity 0.3s ease;
+}
         .logoResto {
           width: 90px;
           height: 90px;
           overflow: hidden;
           border-radius: 50%;
+          transition: 0.3s;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+         
+            transform: rotate(1turn) scale(1.4);
+            // transition: transform 0.3s .3s;
+          }
         }
 
         .menuLink {
@@ -1594,6 +1605,9 @@ body {
   align-items: center;
   .text {
     width: 60%;
+    @media all and (max-width:750px){
+      width: 100%;
+    }
     .t1 {
       font-size: 2em;
       font-weight: 600;
