--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,9 @@ body {
   outline: none;
   user-select: none;
 }
+*:not(.home_input_search__field)::placeholder {
+opacity: .3 !important;
+}
 
 main {
   background: white;
